add jwt token generation
